--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@
   border: 1px solid black;
   background-color: #668845;
 }
+
+.schedule-day {
+  display: flex;
+}
+
+.day-label {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding-right: 0.8rem;
+}
