--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,9 @@
 }
 
 .lesson-cell {
+  max-width: 60rem;
   width: 100%;
-  margin: 0.4rem auto;
+  margin: 0.4rem;
   background-color: white;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -26,6 +27,10 @@
   padding: 0.4rem;
   background-color: #447744;
   color: #fff;
+  min-height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .whole-group {
@@ -57,6 +62,7 @@
 
 .schedule-day {
   display: flex;
+  justify-content: center;
 }
 
 .day-label {
@@ -68,5 +74,4 @@
 
 .flex-row {
   display: flex;
-  flex-direction: row;
 }
